Update list student

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
     <ListView
-        android:id="@+id/listContact"
+        android:id="@+id/listStudents"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 </LinearLayout>
