--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -31,6 +31,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/txtGender"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -67,7 +68,7 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/birthday"
+            android:id="@+id/edtBirthday"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -94,6 +95,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btnAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
@@ -101,6 +103,7 @@
             android:text="Thêm" />
 
         <Button
+            android:id="@+id/btnEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
@@ -109,6 +112,7 @@
             android:enabled="false" />
 
         <Button
+            android:id="@+id/btnDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
