--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -5,14 +5,14 @@
     android:padding="10dp">
 
     <LinearLayout
+        android:layout_marginEnd="10dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/itemClassName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:textSize="20sp"
             android:text="Java" />
     </LinearLayout>
 
