--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -53,6 +53,7 @@
                     android:textSize="20sp" />
 
                 <RadioButton
+                    android:id="@+id/radFemale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nữ"
