--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp">
 
     <LinearLayout
-        android:layout_marginEnd="10dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/itemClassName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Java" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="Java"
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/itemName"
             android:layout_width="match_parent"
@@ -31,35 +32,38 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/itemGender"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="10dp"
+                android:layout_marginRight="10dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp"
-                android:layout_marginRight="10dp"
+                android:paddingBottom="10dp"
                 android:src="@drawable/ic_male" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-            <TextView
-                android:id="@+id/itemPhone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0123 456 789"
-                android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/itemEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ahihi@gmail.com"
-                android:textSize="20sp" />
+                <TextView
+                    android:id="@+id/itemPhone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0123 456 789"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/itemEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ahihi@gmail.com"
+                    android:textSize="20sp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
